playing about with dashboard menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,9 @@
-<h1>
-  {{title}}
-</h1>
+<div class="main-menu">
+  <ul>
+    <li><div>DASHBOARD</div></li>
+    <li><div>DEMAND</div></li>
+    <li><div>ORDERS</div></li>
+    <li><div>SETUP</div></li>
+  </ul>
+
+</div>
