--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,28 @@
 <div class="main-menu">
   <ul>
-    <li><div>DASHBOARD</div></li>
-    <li><div>DEMAND</div></li>
-    <li><div>ORDERS</div></li>
-    <li><div>SETUP</div></li>
-  </ul>
+    <li>
+      <div class="sub-menu">
+        <p>DASHBOARD</p>
+      </div>
+    </li>
+    <li>
+      <div class="sub-menu">
+        <p>DEMAND</p>
+        <div class="sub-menu-items">
+          <ul>
+            <li><div>Sub Menu 1</div></li>
+            <li><div>Sub Menu 2 Longer Name</div></li>
+            <li><div>Sub menu 3</div></li>
+            <li><div>Sub Menu 4</div></li>
+          </ul>
+        </div>
 
+      </div>
+    </li>
+    <li><div class="sub-menu">ORDERS</div></li>
+    <li><div class="sub-menu">SETUP</div></li>
+  </ul>
+  <div class="sub-menu-container">
+
+  </div>
 </div>
